fixed-detail-page-overflow

--- a/style/style.scss
+++ b/style/style.scss
@@ -3,13 +3,18 @@ $prime-color: darkgrey;
 $prime-background: #ffffff;
 * {
   box-sizing: border-box;
-  //border: 1px solid dodgerblue;
+  border: 1px solid dodgerblue;
   margin: 0px;
   padding: 0px;
   color: #363636;
   background-color: $prime-background;
   text-decoration: none;
   font-family: "Montserrat", sans-serif;
+}
+p{
+  @media only screen and(max-width:400px) {
+    font-size: .7rem;
+  }
 }
 .body--deactive {
   overflow: hidden;
@@ -523,29 +528,21 @@ footer {
         width: 50%;
       }
     }
+    &__img {
+      width: 100%;
+    }
     .info-container {
+      width: 100%;
       @media only screen and (min-width: 1000px) {
         width: 50%;
       }
     }
-    &__img {
-      width: 100%;
-    }
-    // .option{
-    //   position: absolute;
-    //   height: 100px;
-    //   bottom: 10px;
-    //   display: flex;
-    //   flex-direction: row;
-    //   justify-content: space-evenly;
-    //   align-items: center;
-    //   img{
-    //     height: 80px;
-    //   }
-    // }
     &__info {
-      width: 500px;
+      width: 100%;
       padding: 50px 25px;
+      @media only screen and (min-width: 500px) {
+        width: 500px;
+      }
       @media only screen and (min-width: 1000px) {
         padding-top: 0px;
       }
